# Stock-Prediction-and-Portfolio-Optimization

./: Hybrid_ML_for_Stock_Forecasting_and_Portfolio_Optimization.ipynb  Machine_Learning_for_Stock_Price_Forecasting_and_Portfolio_Optimization.ipynb  README.md  gradient_boosting_model.pkl  main.py  pyproject.toml  requirements.txt  scaler.pkl  scaler_1.pkl  xgb_model.json  xgboost_model.pkl
